<resources>
    <string name="app_name">Programmeren-4-opdracht-app</string>
    <string name="films">Films</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="register">Register</string>
    <string name="jwt">token</string>
    <string name="preference_file_key">com.example.marni.programmeren_4_opdracht_app.SHARED_PREFS_FILE</string>
    <string name="email">Email</string>
    <string name="description">Icon indicates availability of inventory item</string>
    <string name="load_more_items">Load more items</string>
    <string name="rent">Rent</string>
    <string name="signed_out">Signed out</string>
    <string name="customer_id">customer_id</string>
    <string name="not_return">Return</string>
    <string name="history">History</string>
    <string name="dash">-</string>
</resources>
