<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marni.programmeren_4_opdracht_app.presentation.LoginRegisterActivity">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/etMargin"
        android:layout_marginStart="@dimen/etMargin"
        android:layout_marginTop="?attr/actionBarSize"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/etMargin"
        android:layout_marginStart="@dimen/etMargin"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_below="@+id/view"
        android:layout_alignRight="@+id/view"
        android:layout_alignEnd="@+id/view" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:id="@+id/view" />

    <Button
        android:id="@+id/bRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@+id/view"
        android:layout_toRightOf="@+id/view"
        android:layout_toEndOf="@+id/view" />

</RelativeLayout>
