<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlInventory"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/lvRowPadding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bRent"
        android:layout_alignBottom="@+id/bRent"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/bRent">

        <TextView
            android:id="@+id/tvInventoryId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/tvPadding" />

        <ImageView
            android:id="@+id/ivNotAvailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/tvInventoryId"
            android:contentDescription="@string/description"
            android:src="@drawable/do_not_disturb_grey_24dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvRentalDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/ivNotAvailable"
            android:padding="@dimen/tvPadding" />

    </RelativeLayout>

    <Button
        android:id="@+id/bRent"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/rent" />

    <Button
        android:id="@+id/bReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/not_return" />

</RelativeLayout>
